--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   # Firebase
   firebase_core: ^3.13.0
   firebase_auth: ^5.5.2
-  cloud_firestore: ^5.6.6
+  # cloud_firestore: ^5.6.6
   # Google Sign In
   google_sign_in: ^6.3.0
   # Charts
