--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   # Firebase
   firebase_core: ^3.13.0
   firebase_auth: ^5.5.2
-  # cloud_firestore: ^5.6.6
+  cloud_firestore: ^5.6.6
   # Google Sign In
   google_sign_in: ^6.3.0
   # Charts
@@ -51,6 +51,9 @@ dependencies:
   # Utils
   intl: ^0.20.2
   uuid: ^4.5.1
+  riverpod_annotation: ^2.6.1
+  freezed_annotation: ^3.0.0
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +70,8 @@ dev_dependencies:
   custom_lint: ^0.7.5
   riverpod_lint: ^2.6.5
   very_good_analysis: ^7.0.0
+  freezed: ^3.0.6
+  json_serializable: ^6.9.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
