--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -10,6 +10,7 @@
 analyzer:
   errors:
     public_member_api_docs: ignore
+    avoid_print: ignore
 include: package:very_good_analysis/analysis_options.yaml
 
 linter:
