feat: implement Google sign-in functionality with social auth controller

--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>961436030319-7lekiptvlkfdfsvnajjg1q55hcj7a28f.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.961436030319-7lekiptvlkfdfsvnajjg1q55hcj7a28f</string>
+	<key>ANDROID_CLIENT_ID</key>
+	<string>961436030319-5aac14n7dqhv0qe5tuj054qkikmd7sb8.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
 	<string>AIzaSyAfzy1GMUK9HLhrITDvqjJAYkbf0hLF_CI</string>
 	<key>GCM_SENDER_ID</key>
