--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   riverpod_annotation: ^2.6.1
   freezed_annotation: ^3.0.0
   json_annotation: ^4.9.0
+  flutter_svg: ^2.0.17
 
 dev_dependencies:
   flutter_test:
@@ -83,6 +84,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - assets/icons/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
