--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   cached_network_image: ^3.4.1
   image: ^4.5.4
   path_provider: ^2.1.5
+  flutter_dotenv: ^5.2.1
 
 dev_dependencies:
   flutter_test:
@@ -92,6 +93,7 @@ flutter:
 
   assets:
     - assets/icons/
+    - .env
 
   # To add assets to your application, add an assets section, like this:
   # assets:
