--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -11,6 +11,8 @@ analyzer:
   errors:
     public_member_api_docs: ignore
     avoid_print: ignore
+    lines_longer_than_80_chars: ignore
+    deprecated_member_use: ignore
 include: package:very_good_analysis/analysis_options.yaml
 
 linter:
